force-app/main/default/objects/b3s__Scheduler__c/b3s__Scheduler__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Scheduler</label>
</CustomObject>