force-app/main/default/objects/b3s__Scheduler__c/fields/b3s__Delete_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>b3s__Delete_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Delete Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>