force-app/main/default/objects/b3s__Scheduler__c/fields/b3s__Disable_Employee_Requests__c.field-meta.xml
<CustomField>
    <fullName>b3s__Disable_Employee_Requests__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disable the Employee Requests feature</inlineHelpText>
    <label>Disable Employee Requests</label>
    <type>Checkbox</type>
</CustomField>