force-app/main/default/objects/b3s__Scheduler__c/fields/b3s__Disable_Shift_Alerts_Delete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>b3s__Disable_Shift_Alerts_Delete_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the trigger that deletes Event Alerts on update will be disabled</inlineHelpText>
    <label>Disable Shift Alerts Delete Trigger</label>
    <type>Checkbox</type>
</CustomField>