force-app/main/default/objects/b3s__Scheduler__c/fields/b3s__Disable_Shift_Invitations_Delete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>b3s__Disable_Shift_Invitations_Delete_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Shift Invitations Delete Trigger</label>
    <type>Checkbox</type>
</CustomField>