force-app/main/default/objects/b3s__Scheduler__c/fields/b3s__Files_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>b3s__Files_Endpoint__c</fullName>
    <defaultValue>&quot;https://files.3b4sf.com&quot;</defaultValue>
    <label>Files Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>