force-app/main/default/objects/b3s__Scheduler__c/fields/b3s__License_Key__c.field-meta.xml
<CustomField>
    <fullName>b3s__License_Key__c</fullName>
    <label>License Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>