force-app/main/default/objects/b3s__Scheduler__c/fields/b3s__Scheduler_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>b3s__Scheduler_Page_Name__c</fullName>
    <defaultValue>&quot;Scheduler&quot;</defaultValue>
    <label>Scheduler Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>